tests-system/int-literals-6/output
T test1 { v = 3__3 }
                ^ int-literals-6/foo.trlc:3: error: base 10 digit is required here
T test1 { v = 3__3 }
                ^ int-literals-6/foo.trlc:3: error: unexpected character '_'
Processed 1 model(s), 0 check(s) and 1 requirement file(s) and found 2 error(s)
